--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Projects</a></li>
                 </ul>
             </div>
         </nav>
@@ -51,7 +51,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         Dutse Sokale · Abuja Nigeria, <b><u style="color: #343A40;">07037541482</u> </b>·
-                        <a href="mailto:baronchibuikem@gmail.com">baronchibuikem@gmail.com</a>
+                        <a href="mailto:baronchibuikem@gmail.com">baronchibuike@gmail.com</a>
                     </div>
                     <p class="lead mb-5">
                         A fullstack software developer who is very passionate about using technology to solve everyday challenges. 
