corrected a typo on the index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -144,8 +144,8 @@
                                 <p class="card-text">
                                     UI design of a platform that aims to make health data available to the public for informational purposes
                                 </p>
-                                <p><a href="http://pollsurveyspa.herokuapp.com">Demo of the frontend with React</a><br>
-                                     <a href="http://pollsurvey.herokuapp.com">Demo of the frontend with Vue</a></p>
+                                <p><a href="https://healthdb.herokuapp.com">Demo of the frontend with React</a><br>
+                                     <a href="https://vuedata4all.herokuapp.com/">Demo of the frontend with Vue</a></p>
                                 
                                 <p><b>Technologies</b>: Django, Django-Rest, React, Redux, Vue, Vuex</p>
                                 <a class="social-icon" href="https://github.com/Baronchibuikem/HealthCycloFrontend"><i class="fab fa-github"></i></a> Codebase on Github for React
