fixed image not displaying on live serve

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-12 ">
                             <div class="card text-left shadow">
-                              <img class="card-img-top" src="{% static 'assets/img/poll.png' %}" alt="">
+                              <img class="card-img-top" src="{% static 'assets/img/poll.PNG' %}" alt="">
                               <div class="card-body">
                                 <h4 class="card-title">Poll Survey Web Application</h4>
                                 <p class="card-text">A web application built to help users create and vote on polls and see the result
@@ -106,7 +106,7 @@
                         </div>
                         <div class="col-md-4 col-sm-12">
                             <div class="card text-left shadow">
-                                <img class="card-img-top" src="{% static 'assets/img/apartment.png' %}" alt="">
+                                <img class="card-img-top" src="{% static 'assets/img/apartment.PNG' %}" alt="">
                                 <div class="card-body">
                                   <h4 class="card-title">Estate Web application</h4>
                                   <p class="card-text">A real website for listing of available apartments and Agent in charge of those apartments
@@ -121,7 +121,7 @@
                         </div>
                         <div class="col-md-4 col-sm-12">
                             <div class="card text-left shadow">
-                                <img class="card-img-top" src="{% static 'assets/img/purityclinic.png' %}" alt="">
+                                <img class="card-img-top" src="{% static 'assets/img/purityclinic.PNG' %}" alt="">
                                 <div class="card-body">
                                   <h4 class="card-title">Hospital Management Platform</h4>
                                   <p class="card-text">A platform designed to help hospitals better manage their processes and resource
@@ -138,7 +138,7 @@
                     <div class="row mt-5">
                         <div class="col-md-4 col-sm-12 ">
                             <div class="card text-left shadow">
-                              <img class="card-img-top" src="{% static 'assets/img/healthdbReact.png' %}" alt="">
+                              <img class="card-img-top" src="{% static 'assets/img/healthdbReact.PNG' %}" alt="">
                               <div class="card-body">
                                 <h4 class="card-title">Health Data platform UI</h4>
                                 <p class="card-text">
@@ -155,7 +155,7 @@
                         </div>
                         <div class="col-md-4 col-sm-12">
                             <div class="card text-left shadow">
-                                <img class="card-img-top" src="{% static 'assets/img/openHISA.png' %}" alt="">
+                                <img class="card-img-top" src="{% static 'assets/img/openHISA.PNG' %}" alt="">
                                 <div class="card-body">
                                   <h4 class="card-title">OpenHISA Web Platform</h4>
                                   <p class="card-text">An insurance platform designed to help insurance organization better manage their processes
@@ -170,7 +170,7 @@
                         </div>
                         <div class="col-md-4 col-sm-12">
                             <div class="card text-left shadow">
-                                <img class="card-img-top" src="{% static 'assets/img/onlinecourses.png' %}" alt="">
+                                <img class="card-img-top" src="{% static 'assets/img/onlinecourses.PNG' %}" alt="">
                                 <div class="card-body">
                                   <h4 class="card-title">Online Course Platform</h4>
                                   <p class="card-text">A Web platform being developed to help user's enroll into different courses
