fixed image not displaying on live serve

--- a/templates/index.html
+++ b/templates/index.html
@@ -157,10 +157,10 @@
                             <div class="card text-left shadow">
                                 <img class="card-img-top" src="{% static 'assets/img/openHISA.PNG' %}" alt="">
                                 <div class="card-body">
-                                  <h4 class="card-title">OpenHISA Web Platform</h4>
+                                  <h4 class="card-title">Insurance Web Platform</h4>
                                   <p class="card-text">An insurance platform designed to help insurance organization better manage their processes
                                   </p>
-                                  <p><a href="http://housingpartments.herokuapp.com/">Demo of the frontend</a><br> <a href="http://pollsurvey.herokuapp.com">Demo of the API backend</a></p>
+                                  <p><a href="#">Demo of the frontend</a><br> <a href="#">Demo of the API backend</a></p>
                                   
                                   <p><b>Technologies used</b>: Django, Django-Rest, Vue, Vuex</p>
                                   <a class="social-icon" href="#"><i class="fab fa-github"></i></a> Codebase on Github
