fixed image not displaying on live serve

--- a/templates/index.html
+++ b/templates/index.html
@@ -160,10 +160,12 @@
                                   <h4 class="card-title">Insurance Web Platform</h4>
                                   <p class="card-text">An insurance platform designed to help insurance organization better manage their processes
                                   </p>
-                                  <p><a href="#">Demo of the frontend</a><br> <a href="#">Demo of the API backend</a></p>
+                                  <p><a href="http://104.225.217.155:8350/">Demo of the frontend</a><br>
+                                     <!-- <a href="#">Demo of the API backend</a> -->
+                                    </p>
                                   
                                   <p><b>Technologies used</b>: Django, Django-Rest, Vue, Vuex</p>
-                                  <a class="social-icon" href="#"><i class="fab fa-github"></i></a> Codebase on Github
+                                  <a class="social-icon" href="#"><i class="fab fa-github"></i></a> Codebase on Github(Private)
                                   
                                 </div>
                               </div>
