fixed image not displaying on live serve

--- a/templates/index.html
+++ b/templates/index.html
@@ -100,9 +100,11 @@
                                 <p><a href="http://pollsurveyspa.herokuapp.com">Demo of the frontend</a><br> <a href="http://pollsurvey.herokuapp.com">Demo of the API backend</a></p>
                                 
                                 <p><b>Technologies used</b>: Django, Django-Rest, React, Redux</p>
-                                <a class="social-icon" href="https://github.com/Baronchibuikem/PollSurveySPA"><i class="fab fa-github"></i></a> Codebase on Github
+                                <a class="social-icon" href="https://github.com/Baronchibuikem/PollSurveySPA"><i class="fab fa-github"></i></a> Codebase on Github for React
+                                <a class="social-icon" href="https://github.com/Baronchibuikem/pollsurveydb"><i class="fab fa-github"></i></a> Codebase on Github for Django
                               </div>
                             </div>
+                            
                         </div>
                         <div class="col-md-4 col-sm-12">
                             <div class="card text-left shadow">
