removed couple of code snippets

--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@
                                 
                                 <p><b>Technologies used</b>: Django, Django-Rest, React, Redux</p>
                                 <a class="social-icon" href="https://github.com/Baronchibuikem/PollSurveySPA"><i class="fab fa-github"></i></a> Codebase on Github for React
-                                <a class="social-icon" href="https://github.com/Baronchibuikem/pollsurveydb"><i class="fab fa-github"></i></a> Codebase on Github for Django
+                                <!-- <a class="social-icon" href="https://github.com/Baronchibuikem/pollsurveydb"><i class="fab fa-github"></i></a> Codebase on Github for Django -->
                               </div>
                             </div>
                             
@@ -150,8 +150,8 @@
                                      <a href="https://vuedata4all.herokuapp.com/">Demo of the frontend with Vue</a></p>
                                 
                                 <p><b>Technologies</b>: Django, Django-Rest, React, Redux, Vue, Vuex</p>
-                                <a class="social-icon" href="https://github.com/Baronchibuikem/HealthCycloFrontend"><i class="fab fa-github"></i></a> Codebase on Github for React
-                                <a class="social-icon" href="https://github.com/Baronchibuikem/HealthCycloFrontend"><i class="fab fa-github"></i></a> Codebase on Github for Vue
+                                <!-- <a class="social-icon" href="https://github.com/Baronchibuikem/HealthCycloFrontend"><i class="fab fa-github"></i></a> Codebase on Github for React -->
+                                <!-- <a class="social-icon" href="https://github.com/Baronchibuikem/HealthCycloFrontend"><i class="fab fa-github"></i></a> Codebase on Github for Vue -->
                             </div>
                             </div>
                         </div>
