added couple of content

--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,7 @@
                                 <p><a href="http://pollsurveyspa.herokuapp.com">Demo of the frontend</a><br> <a href="http://pollsurvey.herokuapp.com">Demo of the API backend</a></p>
                                 
                                 <p><b>Technologies used</b>: Django, Django-Rest, React, Redux</p>
-                                <a class="social-icon" href="https://github.com/Baronchibuikem/PollSurveySPA"><i class="fab fa-github"></i></a> Codebase on Github for React
+                                <i class="fab fa-github"></i><a class="social-icon" href="https://github.com/Baronchibuikem/PollSurveySPA"> Codebase on Github for React</a>
                                 <!-- <a class="social-icon" href="https://github.com/Baronchibuikem/pollsurveydb"><i class="fab fa-github"></i></a> Codebase on Github for Django -->
                               </div>
                             </div>
@@ -116,7 +116,7 @@
                                   <p><a href="http://housingpartments.herokuapp.com/">Demo of the frontend</a><br> <u>In active development</u></p>
                                   
                                   <p><b>Technologies used</b>: Django, Django-Rest, React, Redux</p>
-                                  <a class="social-icon" href="https://github.com/Baronchibuikem/ApartmentListing"><i class="fab fa-github"></i></a> Codebase on Github
+                                  <i class="fab fa-github"></i><a class="social-icon" href="https://github.com/Baronchibuikem/ApartmentListing"> Codebase on Github</a>
                                   
                                 </div>
                               </div>
@@ -131,7 +131,7 @@
                                   <p><a href="http://purityclinic.herokuapp.com//">Demo of the plaform</a><br><u>In active development</u></a></p>
                                   
                                   <p><b>Technologies used</b>: Django, Django-Rest, React, Redux</p>
-                                  <a class="social-icon" href="https://github.com/Baronchibuikem/HospitalManagementApp"><i class="fab fa-github"></i></a> Codebase on Github
+                                  <i class="fab fa-github"></i> <a class="social-icon" href="https://github.com/Baronchibuikem/HospitalManagementApp">Codebase on Github</a>
                                   
                                 </div>
                               </div>
@@ -150,8 +150,8 @@
                                      <a href="https://vuedata4all.herokuapp.com/">Demo of the frontend with Vue</a></p>
                                 
                                 <p><b>Technologies</b>: Django, Django-Rest, React, Redux, Vue, Vuex</p>
-                                <!-- <a class="social-icon" href="https://github.com/Baronchibuikem/HealthCycloFrontend"><i class="fab fa-github"></i></a> Codebase on Github for React -->
-                                <!-- <a class="social-icon" href="https://github.com/Baronchibuikem/HealthCycloFrontend"><i class="fab fa-github"></i></a> Codebase on Github for Vue -->
+                                <i class="fab fa-github"></i><a class="social-icon" href="https://github.com/Baronchibuikem/HealthCycloFrontend">Codebase on Github for React</a>
+                                <i class="fab fa-github"></i><a class="social-icon" href="https://github.com/Baronchibuikem/vuedata4all">Codebase on Github for Vue</a>
                             </div>
                             </div>
                         </div>
@@ -182,7 +182,7 @@
                                   <p><a href="http://chibyk.pythonanywhere.com/">Demo of the plaform</a><br><u>In active development</u></a></p>
                                   
                                   <p><b>Technologies used</b>: Django, Boostrap, Css</p>
-                                  <a class="social-icon" href="https://github.com/Baronchibuikem/Ablib"><i class="fab fa-github"></i></a> Codebase on Github
+                                  <i class="fab fa-github"></i> <a class="social-icon" href="https://github.com/Baronchibuikem/Ablib">Codebase on Github</a>
                                   
                                 </div>
                               </div>
