checked the link to pollsurvey frontend

--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,7 @@
                                 <p class="card-text">A web application built to help users create and vote on polls and see the result
                                     real time
                                 </p>
-                                <p><a href="http://pollsurveyspa.herokuapp.com">Demo of the frontend</a><br> <a href="http://pollsurvey.herokuapp.com">Demo of the API backend</a></p>
+                                <p><a href="https://polldecider.herokuapp.com/">Demo of the frontend</a><br> <a href="http://pollsurvey.herokuapp.com">Demo of the API backend</a></p>
                                 
                                 <p><b>Technologies used</b>: Django, Django-Rest, React, Redux</p>
                                 <i class="fab fa-github"></i><a class="social-icon" href="https://github.com/Baronchibuikem/PollSurveySPA"> Codebase on Github for React</a>
