removed a project from the list of projects

--- a/templates/index.html
+++ b/templates/index.html
@@ -155,23 +155,23 @@
                             </div>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-12">
+                        <!-- <div class="col-md-4 col-sm-12">
                             <div class="card text-left shadow">
                                 <img class="card-img-top" src="{% static 'assets/img/openHISA.PNG' %}" alt="">
                                 <div class="card-body">
                                   <h4 class="card-title">Insurance Web Platform</h4>
                                   <p class="card-text">An insurance platform designed to help insurance organization better manage their processes
                                   </p>
-                                  <p><a href="http://104.225.217.155:8350/">Demo of the frontend</a><br>
+                                  <p><a href="http://104.225.217.155:8350/">Demo of the frontend</a><br> -->
                                      <!-- <a href="#">Demo of the API backend</a> -->
-                                    </p>
+                                    <!-- </p>
                                   
                                   <p><b>Technologies used</b>: Django, Django-Rest, Vue, Vuex</p>
                                   <a class="social-icon" href="#"><i class="fab fa-github"></i></a> Codebase on Github(Private)
                                   
                                 </div>
                               </div>
-                        </div>
+                        </div> -->
                         <div class="col-md-4 col-sm-12">
                             <div class="card text-left shadow">
                                 <img class="card-img-top" src="{% static 'assets/img/onlinecourses.PNG' %}" alt="">
