updated my skills column in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,10 +73,10 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class=""><i class="fa fa-file mr-2"></i><h4>Html,CSS, Boostrap, Materializecss</h4></li>
-                        <li class=""><i class="fab fa-js-square mr-2"></i><h4>Javascript(React, Redux, Vue, Vuex)</h4></li>
+                        <li class=""><i class="fa fa-file mr-2"></i><h4>Html,CSS, Boostrap</h4></li>
+                        <li class=""><i class="fab fa-js-square mr-2"></i><h4>Javascript(React, Redux, Vue, Vuex, Node, Express)</h4></li>
                         <li class=""><i class="fab fa-python mr-2"></i><h4>Python(Django, Django-Rest)</h4></li>
-                        <li class=""><i class="fa fa-database mr-2"></i><h4>Postgres, Sqlite</h4></li>
+                        <li class=""><i class="fa fa-database mr-2"></i><h4>Postgres, Sqlite, MongoDB</h4></li>
                         <li class=""><i class="fab fa-github mr-2"></i><h4>Git, Github, Gitlab</h4></li>
                     </ul>
                    
