updated index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,11 +50,11 @@
                         <span class="text-primary">Baron Chibuikem</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Dutse Sokale · Abuja Nigeria, <b><u style="color: #343A40;">07037541482</u> </b>·
+                        Abuja Nigeria, <b><u style="color: #343A40;">07037541482</u> </b>·
                         <a href="mailto:baronchibuikem@gmail.com">baronchibuike@gmail.com</a>
                     </div>
                     <p class="lead mb-5">
-                        A fullstack software developer who is very passionate about using technology to solve everyday challenges. 
+                    A software developer who is very passionate about using technology to solve everyday challenges. 
                     When i'm not coding then I'm probably on my PC palying football manager. My love for that game though!</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://linkedin.com/in/anozie-u-chibuikem"><i class="fab fa-linkedin-in"></i></a>
@@ -192,7 +192,7 @@
                         <!-- <div class="subheading mb-3">Programming Languages & Tools</div> -->
                         <ul class="list-unstyled">
                             <div class="row">
-                                <div class="col-md-4 col-sm-12">
+                                <div class="col-md-3 col-sm-12">
                                     <li class=""><h4>Apex Legend Tracker</h4>
                                        
                                             <li><a href="https://apex-lengends.herokuapp.com/">Click for Demo</a></li>
@@ -201,7 +201,7 @@
                                         
                                     </li>
                                 </div>
-                                <div class="col-md-4 col-sm-12">
+                                <div class="col-md-3 col-sm-12">
                                     <li class=""><h4>Health Stats</h4>
                                         
                                             <li><a href="https://apex-lengends.herokuapp.com/">Click for Demo</a></li>
@@ -210,7 +210,7 @@
                                         
                                     </li>
                                 </div>
-                                <div class="col-md-4 col-sm-12">
+                                <div class="col-md-3 col-sm-12">
                                     <li class=""><h4>YouDecide</h4>
                                         
                                             <li><a href="https://youdecidespa.herokuapp.com/">Click for Demo</a></li>
@@ -218,6 +218,16 @@
                                             <li>Technologies: Vue, Vuex, Boostrap (in active development)</li>
                                         
                                     </li>
+                                </div>
+                                <div class="col-md-3 col-sm-12">
+                                    <li class=""><h4>YouDecide</h4>
+                                        
+                                        <!-- <li><a href="https://youdecidespa.herokuapp.com/">Click for Demo</a></li> -->
+                                        <li><a href="https://github.com/Baronchibuikem/Devsconnect">Click to get the codebase</a></li>
+                                        <li>Technologies: Express, Node, React, Redux</li>
+                                    
+                                </li>
+                                    
                                 </div>
                             </div>                            
                         </ul>
